--- a/rss-react-project/src/components/Search/Search.scss
+++ b/rss-react-project/src/components/Search/Search.scss
@@ -15,3 +15,9 @@
   line-height: 20px;
   letter-spacing: 0.3px;
 }
+
+.search-wrapper {
+  display: flex;
+  justify-content: center;
+  column-gap: 30px;
+}
