--- a/rss-react-project/src/components/CustomButton/CustomButton.module.scss
+++ b/rss-react-project/src/components/CustomButton/CustomButton.module.scss
@@ -1,4 +1,4 @@
-.search-button {
+.searchButton {
   cursor: pointer;
   border-radius: 2px;
   border: 1px solid #0c0c0e;
@@ -16,7 +16,7 @@
   height: 50px;
 }
 
-.search-button:hover {
+.searchButton:hover {
   background: black;
   color: #fff;
   border: 1px solid #fff;
