--- a/rss-react-project/src/components/Search/Search.module.scss
+++ b/rss-react-project/src/components/Search/Search.module.scss
@@ -1,4 +1,4 @@
-.search-input {
+.searchInput {
   width: 430px;
   height: 50px;
   border: 1px solid #181612;
@@ -16,7 +16,7 @@
   letter-spacing: 0.3px;
 }
 
-.search-wrapper {
+.searchWrapper {
   display: flex;
   justify-content: center;
   column-gap: 30px;
