--- a/rss-react-project/src/components/Card/Card.module.scss
+++ b/rss-react-project/src/components/Card/Card.module.scss
@@ -6,7 +6,7 @@
   row-gap: 10px;
 
   width: 300px;
-  height: 250px;
+  height: 350px;
 
   border: 1px solid black;
 }
@@ -18,4 +18,10 @@
 
 .cardDescription {
   font-size: 15px;
+}
+
+.test {
+  width: 30px;
+  height: 30px;
+  display: flex;
 }
