feat: migrate to NextJS page router

--- a/rss-react-project/src/pages/Page404.module.scss
+++ b/rss-react-project/src/pages/Page404.module.scss
@@ -3,7 +3,7 @@
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
-  background-image: url('../../assets/page404-img.png');
+  // background-image: url('../../assets/page404-img.png');
   background-size: cover;
   height: 600px;
 }
